css/styles.css
body {
    margin: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
        sans-serif;
    background-image: url(../images/background.avif);
    background-size: cover;
    background-position: center;
    position: relative;
    min-height: calc(100svh - 7.5em * 2);
    padding: 7.5em 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

a,
a:hover,
a:visited {
    color: #000000aa;
}

a:not(nav a) {
    text-decoration: underline dotted 1.8pt;
    text-underline-offset: 0.25em;
    text-decoration-skip-ink: none;
}

a.no-decoration {
    text-decoration: none;
}

.hidden {
    display: none;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #fff;
    backdrop-filter: blur(10px);
    gap: 1rem;
    overflow: hidden;
    transition: background-color 0.33s ease-out;
    z-index: 999;
    margin-inline: auto;
    min-height: 3em;
}

header h2 {
    color: black;
    text-shadow: 0 0 100px #fff, 0 0 50px #fff, 0 0 25px #fff, 0 0 12.5px #fff;
    transition: color 0.33s ease-out;
}

nav {
    display: flex;
    align-items: center;
    width: 1080px;
    margin: 0 auto;
}

nav ul {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    height: max-content;
    width: 100%;
    list-style-type: none;
    margin: 0;
    text-align: center;
}

nav a,
nav a:hover,
nav a:visited {
    color: #000;
    text-decoration: none;
    transition: color 0.33s ease-out;
}

nav a {
    flex-shrink: 0;
    padding: 0.5em;
}

nav a.active,
nav a:hover {
    font-weight: bold;
    text-shadow: 0 0 100px #fff, 0 0 50px #fff, 0 0 25px #fff, 0 0 12.5px #fff;
}

nav a.active {
    position: relative;
    transition: 0.33s ease-out;
    border: solid 2pt #000;
    border-radius: 0.5em;
}

nav a.active::after {
    content: '';
    display: block;
    position: absolute;
    top: -1.5pt;
    left: -1.5pt;
    width: 100%;
    height: 100%;
    transition: 0.33s ease-out;
    border: solid 2pt transparent;
    border-radius: 0.5em;
}

nav a.active.changed::after {
    content: '';
    display: block;
    position: absolute;
    top: -1.5pt;
    left: -1.5pt;
    width: 100%;
    height: 100%;
    border: solid 2pt white;
    border-radius: 0.5em;
    filter: blur(5px);
}

main {
    margin: auto;
}

main h1,
main h2,
main h3,
main h4,
main h5,
main h6 {
    text-align: center;
}

main section:not(:is(:first-child)) {
    margin-top: 2em;
}

section {
    max-width: calc(1080px - 8em);
    position: relative;
    font-size: 1.05rem;
    margin: auto;
    border-radius: 2em;
    background: white;
    box-shadow: 0 0 90px #fff;
    padding: 4em;
}

section img {
    display: block;
    margin: auto;
    border-radius: 1.25em;
    margin-bottom: 1.1em;
    height: 25em;
    box-shadow: #00000055 0 -5px 50px;
}

img.dw {
    box-shadow: none;
    position: absolute;
    height: 15%;
    top: 1em;
    left: 1em;
}

img.bbc {
    box-shadow: none;
    position: absolute;
    height: auto;
    width: 15%;
    top: 1em;
    right: 1em;
    border-radius: 0 0.6em 0 0;
}

section {
    width: 1080px;
}

section h1 {
    margin: 0 1em 0.5em 1em;
    font-size: 2.8em;
}

section h2 {
    margin-bottom: 1em;
}

section p {
    display: block;
    margin: auto;
    /* max-width: 67ch; */
}

#datatable_wrapper {
    margin-block: 2em !important;
}

tbody td,
thead th {
    text-align: center !important;
}

table tbody th {
    text-align: left;
    padding-left: 1em !important;
}

th::before {
    margin-bottom: .1em !important;
}

th::after {
    margin-top: .1em !important;
}

#datatable_wrapper a {
    cursor: pointer;
    margin-inline: 0.5em;
    border: solid 2pt #000;
    border-radius: 0.5em;
}

#datatable_wrapper .current,
#datatable_wrapper a:hover {
    background-color: black;
    background-image: none;
    color: white !important;
}

footer {
    display: flex;
    position: absolute;
    bottom: 0;
    width: 100%;
    justify-content: center;
    align-items: center;
}

footer p {
    display: block;
    margin: 0;
    padding-block: 2ch;
    width: 1080px;
    border-radius: 2em 2em 0 0;
    background: white;
    box-shadow: 0 0 90px #fff;
    text-align: center;
}

*:not(body *) {
    background-color: #000;
}

.help {
    cursor: help;
    color: #000000aa;
    text-decoration: underline dotted 1.8pt;
    text-align: center;
    text-underline-offset: 0.25em;
    text-decoration-skip-ink: none;
}

:is(#contact, #upload-form) {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-inline: auto;
    width: 100%;
    gap: 1em;
}

:is(#contact, #upload-form) .help {
    text-underline-offset: -0.2em;
    color: red;
}

#author {
    gap: 1em;
    display: flex;
    flex-direction: column;
}

#author div {
    display: flex;
    width: 100%;
    gap: 2em;
}

#author * * {
    width: 50%;
}

.success,
.error,
.warning {
    width: calc(100% - 1em * 2);
    background-color: var(--_back);
    border-radius: 0.75em;
    color: var(--_color);
    padding: 1em;
    margin-bottom: 1em;
    font-weight: bolder;
}

.success {
    --_back: #caf7ca;
    --_color: #007500;
}

.error {
    --_back: #ffebeb;
    --_color: #db0000;
}

.warning {
    --_back: #fff0db;
    --_color: #ac5200;
}

input:not(#devis, #reclam, #info, #other),
textarea,
:is(#contact, #upload-form) button,
fieldset {
    padding: 0.25em 1em !important;
    border: solid black 2pt !important;
    border-radius: 0.75em !important;
}

input:not(#devis, #reclam, #info, #other) {
    height: 2em !important;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
        sans-serif !important;
    font-size: 0.9rem !important;
}

#other-field {
    will-change: transform;
    animation: fadeWiden .5s cubic-bezier(.1, .69, .1, 2) forwards;
    width: fit-content;
}

fieldset {
    border: dashed !important;
    transition: all .33s;
}

fieldset div {
    padding: .4em;
}

:is(#devis, #reclam, #info, #other) {
    appearance: none;
    border-radius: 50%;
    width: 16px;
    height: 16px;
    border: 2px solid black;
    transition: .33s ease-in-out;
}

:is(#devis, #reclam, #info, #other):checked {
    border-width: 8px;
}

textarea {
    resize: vertical;
    min-height: 1.25em;
    padding: 1em !important;
    height: 33svh;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 0.9rem;
}

:is(#contact, #upload-form) button {
    position: relative;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
        sans-serif;
    font-size: 0.9rem;
    width: 7em;
    align-self: center;
    cursor: pointer;
    background-color: black;
    color: white;
    font-weight: bolder;
    text-align: center;
    transition: all cubic-bezier(0, 0, 0, 1) 0.5s;
}

:is(#contact, #upload-form) button :is(#after, #before) {
    fill: transparent;
    position: absolute;
    width: 1em;
    bottom: -2em;
}

:is(#contact, #upload-form) button:is(:hover, :focus) :is(#after, #before) {
    transition: all cubic-bezier(0, 0, 0, 1) 0.67s,
        rotate cubic-bezier(0, 0, 0, 1) 1.33s;
    fill: white;
    rotate: 0deg;
    bottom: 0.33em;
}

:is(#contact, #upload-form) button #before {
    rotate: -720deg;
    left: 0;
    scale: -1 1;
}

:is(#contact, #upload-form) button #after {
    rotate: 720deg;
    right: 0;
}

:is(#contact, #upload-form) button:is(:hover, :focus) #after {
    right: 1em;
}

:is(#contact, #upload-form) button:is(:hover, :focus) #before {
    left: 1em;
}

:is(#contact, #upload-form) button:is(:hover, :focus) {
    width: 50%;
    translate: 0 -8px;
    rotate: 1deg;
    scale: 105%;
    box-shadow: 0 8px 15px #00000067;
}

#gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 3rem;
}

#gallery img {
    --_mouseX: 0;
    --_mouseY: 0;
    cursor: help;
    width: 33%;
    height: auto;
    margin: 0;
    filter: brightness(50%) grayscale(100%);
    transition: 0.167s cubic-bezier(0, 0, 0, 1), transform .67s ease-out;
    will-change: transform;
}

#gallery img:hover {
    scale: 150%;
    filter: brightness(100%) grayscale(0);
    transition: all 0.33s cubic-bezier(0, 0, 0, 2.37), filter 0.33s ease-out, transform 0 linear;
    box-shadow: 0 0 15px #000000aa;
    z-index: 50;
    transform: perspective(700px) rotateX(calc(var(--_mouseY) * -5deg)) rotateY(calc(var(--_mouseX) * 5deg));
}

video {
    position: fixed;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    min-height: 100svh;
    min-width: 100vw;
    z-index: 1000;
    opacity: 0;
}

#unmute,
#close,
#play {
    position: fixed;
    background: none;
    border: 0 none;
    cursor: pointer;
    fill: white;
    z-index: 1001;
    opacity: 0;
}

:is(#unmute, #close, #play) i::before {
    display: inline-block;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font-size: 48px;
    color: #fff;
}

#unmute {
    bottom: 50px;
    width: 64px;
    right: 50px;
}

#close {
    top: 50px;
    width: 48px;
    right: 50px;
}

#play {
    width: 48px;
    display: none;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
}

#unmute:hover,
#unmute:focus,
#close:hover,
#close:focus,
#play:hover,
#play:focus {
    scale: 110%;
}

form:has(#watch-again) {
    display: flex;
    justify-content: center;
    margin-bottom: 1em;
}

#watch-again {
    cursor: pointer;
    font-size: 1.2em;
    background: none;
    border: 0 none;
}

#watch-again p {
    position: relative;
    margin: 0;
}

#watch-again svg {
    position: absolute;
    top: 0;
    left: -1.5em;
    height: 1.2em;
    fill: black;
}

footer a {
    /* translate: 0 calc(1.7pt + 0.25em); */
    border-bottom: dotted #000000aa 1.8pt;
    padding-bottom: 0.05em;
    text-decoration: none !important;
}

@keyframes fadeOut {
    from {
        opacity: 1;
        display: block;
    }

    to {
        opacity: 0;
    }
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes fadeWiden {
    from {
        opacity: 0;
        scale: 100% 0;
    }

    to {
        opacity: 1;
        scale: 100% 100%;
    }
}

